--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,12 @@ a {
 }
 
 /* ------------------------------ */
+
+.top-page-background {
+    background-color: #1F2937;
+}
+
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+}
