--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,21 @@ a {
     max-width: 1280px;
     margin: 0 auto;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+.navigation {
+    display: flex;
+    color: #e5e7eb;
+    gap: 25px;
+}
