--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,20 @@ a {
 
 /* --------------------- */
 
+.main-top-page {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-placeholder {
+    width: 500px;
+    height: 250px;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: #f9faf8;
+}
