--- a/css/style.css
+++ b/css/style.css
@@ -53,12 +53,39 @@ a {
     margin-top: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    color: #f9faf8;
+}
+
+.left-side {
+    max-width: 400px;
+}
+
+.left-side > * {
+    margin-bottom: 10px;
+}
+
+.title {
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.description {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.main-top-page button {
+    padding: 8px 32px;
+    background-color: #3882f6;
+    color: #f9faf8;
+    border-radius: 10px;
+    margin-bottom: 0;
 }
 
 .image-placeholder {
-    width: 500px;
-    height: 250px;
+    width: 600px;
+    height: 300px;
     background-color: gray;
     display: flex;
     justify-content: center;
