--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ a {
 /* --------------------- */
 
 .main-top-page {
-    margin-top: 100px;
+    margin: 200px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -81,6 +81,7 @@ a {
     color: #f9faf8;
     border-radius: 10px;
     margin-bottom: 0;
+    cursor: pointer;
 }
 
 .image-placeholder {
