--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
   margin: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 ul {
@@ -21,84 +21,117 @@ a {
 /* ------------------------------ */
 
 .top-page-background {
-    background-color: #1F2937;
+  background-color: #1f2937;
 }
 
 .container {
-    max-width: 1264px;
-    padding: 16px;
-    margin: 0 auto;
+  max-width: 1264px;
+  padding: 16px;
+  margin: 0 auto;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header-logo {
-    font-size: 24px;
-    color: #f9faf8;
+  font-size: 24px;
+  color: #f9faf8;
 }
 
 .navigation {
-    display: flex;
-    color: #e5e7eb;
-    gap: 25px;
+  display: flex;
+  color: #e5e7eb;
+  gap: 25px;
 }
 
 /* --------------------- */
 
 .main-top-page {
-    margin: 200px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #f9faf8;
+  margin: 200px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #f9faf8;
 }
 
 .left-side {
-    max-width: 400px;
+  max-width: 400px;
 }
 
 .left-side > * {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .title {
-    font-size: 48px;
-    font-weight: 900;
+  font-size: 48px;
+  font-weight: 900;
 }
 
 .description {
-    font-size: 18px;
-    color: #e5e7eb;
+  font-size: 18px;
+  color: #e5e7eb;
 }
 
 .main-top-page button {
-    padding: 8px 32px;
-    background-color: #3882f6;
-    color: #f9faf8;
-    border-radius: 10px;
-    margin-bottom: 0;
-    cursor: pointer;
+  padding: 8px 32px;
+  background-color: #3882f6;
+  color: #f9faf8;
+  border-radius: 10px;
+  margin-bottom: 0;
+  cursor: pointer;
 }
 
 .image-placeholder {
-    width: 600px;
-    height: 300px;
-    background-color: gray;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    color: #f9faf8;
+  width: 600px;
+  height: 300px;
+  background-color: gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: #f9faf8;
 }
 
 /* -------------------------------- */
 
 .container-small {
-    max-width: 984px;
-    padding: 16px;
-    margin: 0 auto;
+  max-width: 984px;
+  padding: 16px;
+  margin: 0 auto;
+}
+
+.main {
+  margin: 210px 0;
+}
+
+.main-title {
+  text-align: center;
+  font-size: 36px;
+  font-weight: 900;
+  color: #1f2937;
+  margin-bottom: 70px;
+}
+
+.main-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.list-item {
+  flex: 0;
+}
+
+.list-image {
+  width: 135px;
+  height: 135px;
+  border: #3882f6 solid 5px;
+  border-radius: 10px;
+}
+
+.list-description {
+  text-align: center;
 }
