--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,13 @@ a {
   border-radius: 10px;
   cursor: pointer;
 }
+
+/* -------------------------- */
+.footer {
+  background-color: #1f2937;
+  color: #f9faf8;
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
